# tor-browser

./: .eslintignore  .gitignore  .gitlab-ci.yml  .gitmodules  .mozconfig  .mozconfig-android  .mozconfig-asan  .mozconfig-mac  .mozconfig-mingw  .prettierignore  README.md  moz.configure  mozconfig-android-all  mozconfig-android-all-dev  mozconfig-android-armv7  mozconfig-linux-aarch64-dev  mozconfig-linux-i686  mozconfig-linux-x86_64  mozconfig-linux-x86_64-asan  mozconfig-linux-x86_64-dev  mozconfig-macos  mozconfig-macos-dev  mozconfig-macos-x86_64  mozconfig-windows-i686  mozconfig-windows-x86_64  old-configure.in  run-tbb-tests  tbb-tests-ignore.txt
.cargo/: config.toml.in
.gitlab/ci/: lint.yml  mixins.yml  update-containers.yml  update-translations.yml
.gitlab/issue_templates/: Backport Android Security Fixes.md  Bugzilla Triage.md  Rebase Browser - Alpha.md  Rebase Browser - Legacy.md  Rebase Browser - Rapid.md  Rebase Browser - Stable.md
browser/: confvars.sh  moz.build  moz.configure
browser/actors/: AboutTBUpdateChild.jsm  AboutTBUpdateParent.jsm  ClickHandlerChild.jsm  ClickHandlerParent.jsm  ContextMenuChild.jsm  CryptoSafetyChild.jsm  CryptoSafetyChild.sys.mjs  CryptoSafetyParent.jsm  CryptoSafetyParent.sys.mjs  NetErrorChild.jsm  NetErrorParent.jsm  WebRTCParent.jsm  moz.build
browser/app/: Makefile.in  permissions
browser/base/: jar.mn  moz.build
browser/branding/: tor-styles.inc.css
browser/components/: BrowserContentHandler.jsm  BrowserContentHandler.sys.mjs  BrowserGlue.jsm  BrowserGlue.sys.mjs  moz.build
browser/extensions/: moz.build
browser/installer/: Makefile.in  package-manifest.in
browser/locales/: Makefile.in  filter.py  (+3 more)
caps/: nsScriptSecurityManager.cpp
config/: createprecomplete.py
mfbt/: EnumSet.h
security/: moz.build
supply-chain/: config.toml
tbb-tests/: browser_tor_TB4.js  browser_tor_bug2950.js  browser_tor_omnibox.js  moz.build
testing/: testsuite-targets.mk
toolkit/: moz.build  moz.configure  toolkit.mozbuild
toolkit/components/lox/: Cargo.toml  ILoxService.idl  Lox.sys.mjs  LoxService.h  components.conf  jar.mn  lox_wasm.jsm  moz.build
toolkit/components/lox/content/: lox_wasm_bg.wasm
toolkit/components/lox/src/: lib.rs  service.rs
widget/: WidgetEventImpl.cpp  nsTransferable.cpp  nsXPLookAndFeel.cpp
(+1145 files in other folders)
