[package]
name = "lox_tor_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }

lox-library = { git = "https://gitlab.torproject.org/onyinyang/lox.git", rev = "f8923e2d38aa8ce3d8465dddac201b8cf84d8958" }
lox_utils = { git = "https://gitlab.torproject.org/onyinyang/lox.git", rev = "f8923e2d38aa8ce3d8465dddac201b8cf84d8958" }

# We do not use it directly, but we list to force cargo to take this exact
# version, as 0.8.1 depends on a thiserror 2.
# This can be removed (or relaxed) if we solve this problem.
lox-zkp = { version = "=0.8.0" }

# Firefox ships chrono 0.4.19, but the additional features Lox needs from
# serde_with causes chrono to be updated to >= 0.4.20. So, we lock the oldest
# version we can to avoid the change with respect to upstream.
chrono = { version = "=0.4.20", default-features = false }
